[tool.poetry]
name = "tesla-auth-fastapi"
version = "0.1.0"
description = ""
authors = ["bart.lee(이철민)/kakao <bart.lee@kakaocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
